--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.29.0",
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
+    "victormono": "^1.5.5",
     "vue": "^3.2.0",
+    "vue-multiselect": "^2.1.7",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
