--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.4.0",
     "core-js": "^3.29.0",
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
-    "victormono": "^1.5.5",
     "vue": "^3.2.0",
     "vue-multiselect": "^2.1.7",
     "vue-router": "^4.0.0",
