--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
-    "vue-multiselect": "^2.1.7",
+    "vue-multiselect": "^3.0.0-beta.2",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
