--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.2.0",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-router": "^4.0.0",
+    "vue3-easy-data-table": "^1.5.47",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
