--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.0.0",
     "powerbi-client-vue-js": "^1.0.3",
     "roboto-fontface": "*",
+    "victormono": "^1.5.5",
     "vue": "^3.2.0",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-router": "^4.0.0",
