--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,18 @@ server/my_env
 server/pandasai.log
 server/cache
 server/app.py
+server/__pycache__/
+daemon/
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+server/server.log
+server/service-error.log
+server/server_logs.txt
+server/service.log
 
 # Editor directories and files
 .idea
