--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuetify-project",
-  "version": "0.0.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,8 @@
     "@mdi/font": "7.0.96",
     "axios": "^1.4.0",
     "core-js": "^3.29.0",
+    "express": "^4.18.2",
+    "node-windows": "^1.0.0-beta.8",
     "pinia": "^2.0.0",
     "powerbi-client-vue-js": "^1.0.3",
     "roboto-fontface": "*",
